2005-07-10  David Hampton  <hampton@employees.org>

	* src/engine/iso-4217-currencies.scm: Add the new Romanian Leu.

2005-05-23  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/dialog-hbcitrans.c: Fix handling of debit
	notes -- they were broken at all times since the aqbanking
	transition, oops.

	* src/import-export/hbci/dialog-hbcitrans.c: Add sanity checks and
	ask user when there are no purpose lines.

2005-05-06  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/druid-hbci-initial.c (on_aqhbci_button):
	Finally generalize the AqBanking setup call. Now the setup wizard
	for OFX-DirectConnect can be called by Tools -> HBCI Setup as
	well.

2005-05-05  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-utils.c: Improve debugging
	messages.

2005-04-21  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-getbalance.c: Fix forgotten NULL
	check as reported by Martin Preuss <aquamaniac@gmx.de>.

2005-04-14  David Hampton  <hampton@employees.org>

	* src/engine/iso-4217-currencies.scm: 
	* src/engine/gnc-commodity.c: Update the Bulgarian Lev and add the
	Malagasy Ariary.

2005-04-06  Christian Stimming  <stimming@tuhh.de>

	* po/rw.po, po/glossary/rw.po: Add Kinyarwanda translation by
	Steven Michael Murphy <murf@e-tools.com>

2005-04-06  David Hampton  <hampton@employees.org>

	* src/bin/generate-gnc-script: Be vocal when using deprecated
	guile functions.

	* src/report/report-system/report-system.scm:

	* src/report/utility-reports/utility-reports.scm:
	* src/business/business-reports/business-reports.scm: Use
	re-export instead of export for one function.

2005-04-02  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/dialog-hbcitrans.c: Fix warning about
	deprecated aqbanking function in aqbanking-1.0.7

2005-03-20  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-utils.c: Retrieve the current